# tecnoxamanism

./: LEEME.md  README.md  pyproject.toml
channelling_portal/: entities.py  settings.py
scratches/: benchmark_dtw.py  bluepy3.py  discover.py  plot_angles.py  plot_quaternion.py  send_ble.py  using_bluepy.py  using_bluepy2.py  with_bleak.py
scratches/chat/: conversation_with_whom.py
scratches/img/: funcion.eps  function.alt.py  function.py
scratches/pyo/: create.py  effect.py  play.py
scratches/sculpting/: a_box.py  a_box_with_battlements.py  a_box_with_hinges.py  a_box_with_magnets.py  poco_a_poco.py  poco_a_poco2.py  poco_a_poco3.py
sounds/: Torm.aif  Torm.m4a  Tumtum.aif  Tumtum.m4a
spiritual_entities/: calibrated_orientation.c  espirito.c  espirito_em_transito.c  spirit.c
tests/: test_channelling_portal.py
