[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "channelling-portal"
version = "0.1.0"
description = "Your project description here"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
dtaidistance = "^2.3.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.extras]
bluepy = ["bluepy"]
pyserial = ["pyserial"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"